Added roject details and about section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="intro-text">
                         <span class="name">Mujeebul Hasan</span>
                         <hr class="star-light">
-                        <span class="skills">Android Developer - Web Developer - User Experience Designer</span>
+                        <span class="skills">Android Developer - Web Developer</span>
                     </div>
                 </div>
             </div>
@@ -170,10 +170,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Looking forward to play a responsible role in the organization that enhances my skill and capabilities in a progressive and competitive work culture in a technology driven company.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>My area of interest is Java SE , Java EE and Android Application development. I am also active on different competative coding platforms like codechef, hackerrank.
+</p>
                 </div>
                 
                 <!--
@@ -249,26 +250,20 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>2/508 Nawabganj<br>Kanpur UP India 208002</p>
+                        <p>Sector 12 Noida<br>Uttar Pradesh India</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
+				<li>
+					<a href="https://www.linkedin.com/in/mujeebulhasan/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+	                        </li>
+        	                <li>
+                	                <a href="https://www.facebook.com/aliansari648" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                	        </li>
+                        	<li>
+                                	<a href="https://twitter.com/mujeebul_hasan" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            	</li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
@@ -282,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; www.mujeeb.me.ht 2016
+                        Copyright &copy; www.mujeeb.me.ht 2017
                     </div>
                 </div>
             </div>
@@ -309,21 +304,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Medic Help</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>An android application to show nearby places like Hospitals, Doctors, Pharmacy. It will also show contact details of the place and shortest distance path. Navigation to the selected destination is done using Google Maps.
+</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="">Learning purpose</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="">May 2017</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="">Android Development</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -346,17 +342,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>NLP-Conversational Entity</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This is a natural language processing based conversational agent to provide frequently asked question(FAQ). Backend is implemented in Java Servlet and front-end in html, css and javascript. Ajax is also used for asynchronous call to server for query processing. OpenNLP is used for query processing.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">College project</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2017</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -383,17 +379,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Online Test Portal</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>It’s a web application developed using JSP, Servlet, JavaScript, HTMl and CSS. MySQL is used for database. You can customize the test also.
+</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">Learning pupose</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
